Quiero mi insignia

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 				<hr>
 			</section>
 			<section class="redes-sociales">
-				<p class="pais"><img src="img/Icono Utt.png" alt="">    Esta pagina web fue creada para terminos escolares</p>
+				<p class="pais"><img src="img/Icono Utt.png" alt="">    Esta fue creada para terminos escolares</p>
 				<p class="pais">   Juan Jose De La Cruz Castorena Mayo,2021</p>
 			</section>
 		</section>
